2006-11-05  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	Drop iPSC architecture support.
	* i386/i386/hardclock.c: Remove iPSC386 from #if.
	* i386/i386/locore.S: Remove iPSC386 delays.
	* i386/i386/pic.c: Remove iPSC386 support.
	(SLAVEMASK): Rmove iPSC386 case.
	* i386/i386/pic.h (ADDR_PIC_BASE, OFF_ICW, OFF_OCW, SIZE_PIC)
	(PICM_VECTBASE, PICS_VECTBASE): Remove iPSC386 cases.
	[iPSC386] (I_AM_A_SLAVE, I_AM_A_MASTR): Remove macros.
	* i386/i386/pit.h: Remove iPSC386 from #if.
	[iPSC386] (CLKNUM): Remove macro.
	* kern/machine.c (host_get_boot_info): Remove iPSC386 support.
	* vm/vm_map.h (VM_MAP_COPY_PAGE_LIST_MAX): Remove iPSC case.

	Drop i860 architecture support.
	* i386/i386/pmap.h: Remove i860 comment.
	* i386/intel/pmap.c: Remove i860 comments.
	[i860]: Don't include `i860ipsc/nodehw.h'.
	(INVALIDATE_TLB): Remove i860 case.
	(paging_enabled): Remove variable.
	(pmap_map): Remove setting INTEL_PTE_NCACHE.
	(pmap_bootstrap): Remove i860 support.
	(pmap_page_table_page_alloc): Remove setting INTEL_PTE_NCACHE.
	(pmap_enter): Remove call to flush function.
	(set_dirbase): Remove function.
	* i386/intel/pmap.h: Remove i860 comments.
	(INTEL_PGBYTES, INTEL_PGSHIFT, intel_btop, intel_ptob)
	(intel_round_page, intel_trunc_page, trunc_intel_to_vm)
	(round_intel_to_vm, vm_to_intel, INTEL_PTE_VALID, set_dirbase): Remove
	i860 cases.
	(INTEL_PTE_valid): Remove macro.
	* i386/intel/read_fault.c: Remove i860 comment.

	Drop PS2 architecture support.
	* i386/i386/fpu.c (fpintr): Remove PS2 from #if.
	* i386/i386/gdt.c [PS2] (abios_int_return, abios_th_return, intstack):
	Remove extern declarations.
	* i386/i386/gdt.h [PS2] (ABIOS_INT_RET, ABIOS_TH_RET, ABIOS_INT_SS)
	(ABIOS_TH_SS, ABIOS_FIRST_AVAIL_SEL): Remove macros.
	(GDTSZ): Remove PS2 case.
	* i386/i386/hardclock.c [PS2]: Don't include `i386/pic.h' and
	`i386/pio.h'.
	(hardclock): Remove PS2 prototype and code.
	* i386/i386/locore.S (RET_OFFSET): Remove PS2 stack layout.